<resources>
    <string name="app_name">Car Rental App</string>
    <string name="enter_name">Username</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btn_reg">Register</string>
    <string name="btn_update">Update</string>
    <string name="btn_login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="btn_upload">Upload</string>
</resources>