<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <View
        android:id="@+id/tapView2"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/waveView2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tapView2" />

    <TextView
        android:id="@+id/mRegLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Register"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tapView2" />

    <EditText
        android:textSize="18sp"
        android:id="@+id/mEdtName"
        android:layout_width="347dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/orange"
        android:textColorHint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waveView2" />

    <EditText
        android:textSize="18sp"
        android:id="@+id/registerEmail"
        android:layout_width="346dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/orange"
        android:textColorHint="@color/orange"
        app:layout_constraintEnd_toEndOf="@+id/mEdtName"
        app:layout_constraintStart_toStartOf="@+id/mEdtName"
        app:layout_constraintTop_toBottomOf="@+id/mEdtName" />

    <EditText
        android:textSize="18sp"
        android:id="@+id/registerPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/orange"
        android:textColorHint="@color/orange"
        app:layout_constraintEnd_toEndOf="@+id/registerEmail"
        app:layout_constraintStart_toStartOf="@+id/registerEmail"
        app:layout_constraintTop_toBottomOf="@+id/registerEmail" />

    <EditText
        android:textSize="18sp"
        android:id="@+id/mEdtConfirmPassword"
        android:layout_width="354dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/orange"
        android:textColorHint="@color/orange"
        app:layout_constraintEnd_toEndOf="@+id/registerPassword"
        app:layout_constraintStart_toStartOf="@+id/registerPassword"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword" />

    <Button
        android:textSize="15sp"
        android:id="@+id/mBtnReg"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_bg"
        android:text="@string/btn_reg"
        android:textColor="@color/white"
        app:backgroundTint="@color/orange"
        app:layout_constraintEnd_toEndOf="@+id/mEdtConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/mEdtConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/mEdtConfirmPassword" />

    <LinearLayout
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/mBtnReg"
        app:layout_constraintStart_toStartOf="@+id/mBtnReg"
        app:layout_constraintTop_toBottomOf="@+id/mBtnReg">

        <TextView
            android:id="@+id/mAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account?"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/mSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SignIn"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>